# mipt2024s-3-koshelev-a

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  status.md
.github/workflows/: cmake-single-platform.yml
prj.app/: CMakeLists.txt
prj.app/json-reader/: README.md  collect_data.py  json-reader.cpp
prj.app/jsonreader/: jsonreader.cpp  sax_event_consumer.hpp
prj.app/stack-profiler/: stack_profiler.cpp
prj.app/stack_profiler/: README.md  collect_data.py  stack_profiler.cpp
prj.app/string-profiler/: string-profiler.cpp
prj.app/string_profiler/: README.md  collect_data.py  string-profiler.cpp
prj.app/timer-profiler/: timer_profiler.cpp
prj.app/timer_profiler/: README.md  collect_data.py  timer_profiler.cpp
prj.cw/: .gitignore  CMakeLists.txt  README.md  config.toml
prj.cw/app/: app.cpp
prj.cw/include/: app_exception.hpp  config_manager.hpp  detect.hpp  generator.hpp  iohandler.hpp  transform.hpp  transformer.hpp
prj.cw/src/: app.cpp  app_exception.cpp  config_manager.cpp  gen.cpp  iohandler.cpp  main.cpp  transformer.cpp
prj.cw/src/include/: app_exception.cpp  config_manager.cpp  detect.cpp  generator.cpp  iohandler.cpp  transform.cpp
prj.data/stack-profiler/: test_string.txt
prj.lab/: CMakeLists.txt
prj.lab/json/: CMakeLists.txt  common.hpp  fullread_parser.cpp  fullread_parser.hpp  stream_parser.cpp  stream_parser.hpp
prj.lab/movetester/: CMakeLists.txt  movetester.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp  stackarrexception.cpp  stackarrexception.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp  stackarrtexception.cpp  stackarrtexception.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp  stacklstexception.cpp  stacklstexception.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp  stacklsttexception.cpp  stacklsttexception.hpp
prj.lab/timer/: CMakeLists.txt  timer.cpp  timer.hpp  timeranchor.cpp  timeranchor.hpp  timingunit.hpp
prj.tst/: CMakeLists.txt  common_definitions.hpp  test_runner.cpp
prj.tst/data/: data-parser-test.json
prj.tst/json/: fullread_parser_test.cpp  fullread_parser_test.hpp  stream_parser_test.cpp  stream_parser_test.hpp
prj.tst/movetester/: move_semantics_test.hpp
prj.tst/stackarr/: stackarr_test.cpp  stackarr_test.hpp
prj.tst/stackarrt/: stackarrt_test.cpp  stackarrt_test.hpp
prj.tst/stacklst/: stacklst_test.cpp  stacklst_test.hpp
prj.tst/stacklstt/: stacklstt_test.cpp  stacklstt_test.hpp
prj.tst/task_1/: test_array_stack.cpp
prj.tst/task_2/: test_fullread_parser.cpp  test_stream_parser.cpp
prj.utils/: CMakeLists.txt  test_struct.hpp  type_pair.hpp  utils.hpp
task_1/: .clang-tidy  CMakeLists.txt  README.md  collect_data.py
task_1/data/: .gitignore  test_string.txt
task_1/src/runner/: runner.cxx  task_1_runner.cxx
task_1/src/stack-lib/: CMakeLists.txt
task_1/src/stack-lib/include/stack-lib/: abstract_stack.hxx  array_stack.hxx  list_stack.hxx
task_1/src/stack-lib/test/: CMakeLists.txt  test_main.cxx
task_1/src/stack-lib/test/array-stack-tests/: array_stack_test_complex.cxx  array_stack_test_primitive.cxx
task_1/src/stack-lib/test/list-stack-tests/: list_stack_test_complex.cxx  list_stack_test_primitive.cxx
task_1/src/stl-runner/: stl_runner.cxx  task_1_stl_runner.cxx
task_2/: CMakeLists.txt  README.md  collect_data.py
task_2/src/json-lib/: CMakeLists.txt
task_2/src/json-lib/include/json-lib/: common.hxx  fullread_parser.hxx  stream_parser.hxx
task_2/src/json-lib/src/: fullread_parser.cxx  stream_parser.cxx
task_2/src/lib-runner/: task_2_lib_runner.cxx
task_2/src/library-runner/: library_runner.cxx
task_2/src/runner/: task_2_runner.cxx
test/: CMakeLists.txt  common_definitions.hxx  test_runner.cxx
test/task_1/: sample_test_1.cxx  sample_test_2.cxx  test_array_stack.cxx  test_list_stack.cxx
test/task_2/: test_fullread_parser.cxx  test_stream_parser.cxx
utils/: CMakeLists.txt
utils/include/util-lib/: test_struct.hxx  utils.hxx
