cmake_minimum_required(VERSION 3.5)

###############################################################################
## sources definitions ########################################################
###############################################################################

file(
        GLOB_RECURSE
        STACK_PROFILER_SOURCES
        ${CMAKE_CURRENT_SOURCE_DIR}/stack-profiler/*.cpp
)

###############################################################################
## target definitions #########################################################
###############################################################################

add_executable(
        stack-profiler
        ${STACK_PROFILER_SOURCES}
)

###############################################################################
## dependencies ###############################################################
###############################################################################

target_link_libraries(
        stack-profiler PRIVATE
        stack-arrt-lib
        stack-lstt-lib
        util-lib
)
