###############################################################################
## contents ###################################################################
###############################################################################

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stackarrt)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stacklstt)
