###############################################################################
## contents ###################################################################
###############################################################################

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stackarr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stacklst)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stackarrt)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stacklstt)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/json)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/movetester)
