cmake_minimum_required(VERSION 3.5)

###############################################################################
## project definition #########################################################
###############################################################################

project(task_1)

###############################################################################
## sources definitions ########################################################
###############################################################################

file(
    GLOB_RECURSE
    RUNNER_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runner/*.cxx
)

file(
    GLOB_RECURSE
    STL_RUNNER_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/stl-runner/*.cxx
)

###############################################################################
## target definitions #########################################################
###############################################################################

add_executable(
    runner
    ${RUNNER_SOURCES}
)

add_executable(
    stl-runner
    ${STL_RUNNER_SOURCES}
)

###############################################################################
## dependencies ###############################################################
###############################################################################

add_subdirectory(
    ${CMAKE_CURRENT_SOURCE_DIR}/src/stack-lib
)

target_link_libraries(
    runner PRIVATE
    stack-lib
)