cmake_minimum_required(VERSION 3.5)

###############################################################################
## project definition #########################################################
###############################################################################

project(task_1)

###############################################################################
## sources definitions ########################################################
###############################################################################

file(
    GLOB_RECURSE
    TASK_1_RUNNER_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/runner/*.cxx
)

file(
    GLOB_RECURSE
    TASK_1_STL_RUNNER_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/stl-runner/*.cxx
)

###############################################################################
## target definitions #########################################################
###############################################################################

add_executable(
    task-1-runner
    ${TASK_1_RUNNER_SOURCES}
)

add_executable(
    task-1-stl-runner
    ${TASK_1_STL_RUNNER_SOURCES}
)

###############################################################################
## dependencies ###############################################################
###############################################################################

add_subdirectory(
    ${CMAKE_CURRENT_SOURCE_DIR}/src/stack-lib
)

target_link_libraries(
    task-1-runner PRIVATE
    stack-lib
)